Update minor typos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ permalink: /
 		I am a PhD student in Computer Science at the University of Houston.
 		My research interests lie in the field of Natural Language Processing and Machine Learning.
 		I am particularly interested in addressing the problem of named entity recognition in noisy data.
-		Another thread in my research is the <a href="https://en.wikipedia.org/wiki/Code-switching">linguistic code-switching</a> phenomenon.
+		Another thread in my research is the computational analysis of <a href="https://en.wikipedia.org/wiki/Code-switching">linguistic code-switching</a>.
 		Additionally, I study multimodal approaches that combine lexical (i.e., phonology, morphology, syntax, and
 		semantics) and visual information framed around named-entity-related tasks.
 	</p>
@@ -24,19 +24,19 @@ permalink: /
 	</p>
 
 	<br>
-	<h3>Prior to enter the PhD program</h3>
+	<h3>Prior to entering the PhD program</h3>
 
 	<p>
 		Before starting my Ph.D., I worked at <a href="https://www.beyondgames.co/">Beyond Games Inc.</a> as a Game Developer for 2
 		years and 9 months. I contributed to an MMO mobile game for iOS in many technical aspects (Gameplay, game logic
 		on the server side, UI, etc.). I also contributed as a co-leader of the gameplay engineering team. The project
-		is massive, and it is still in progress.
+		is massive and is still in progress.
 	</p>
 
 	<h3>Chess Life</h3>
 
 	<p>
-		I was a professional chess player for more than 10 years. I became the <a href="https://en.wikipedia.org/wiki/Salvadoran_Chess_Championship">National Chess Champion of El
+		I was a professional chess player for more than 10 years. I became the <a href="https://ratings.fide.com/tournament_report.phtml?event16=73889">National Chess Champion of El
 		Salvador in 2012</a>. Now, I sporadically play chess at The Chess Refinery club in Houston. I also follow the news for the top players and you may see one or two posts on my blog about it :).
 	</p>
 </div>
