Minor fixes on news

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ permalink: /
 	<p>
 		Before starting my Ph.D., I worked at <a href="https://www.beyondgames.co/">Beyond Games Inc.</a> as a Game Developer for 2
 		years and 9 months. I contributed to an MMO mobile game for iOS in many technical aspects (Gameplay, game logic
-		on the server side, UI, etc.). I also worked as a co-leader of the gameplay engineering team in my last year. Check the game <a href="https://www.battlestrikeforce.com/">here</a>.
+		on the server side, UI, etc.). I also worked as a co-leader of the gameplay engineering team in my last year. Check out the game <a href="https://www.battlestrikeforce.com/">here</a>!
 	</p>
 
 	<h3>Chess Life</h3>
