--- a/index.html
+++ b/index.html
@@ -6,22 +6,34 @@ permalink: /
 ---
 
 <div class='other-pages'>
-
-	<h3>Welcome!</h3>
-	<br>
+	<p>
+		<h3>Welcome! </h3>
+	</p>
 	<p>
 		<img src="{{ '/assets/images/profile_photo.png' | relative_url }}" width="240" height="240" style="float:right; margin: 0px 30px 30px 20px;" />
-		I am a PhD candidate in Computer Science at the University of Houston.
-		My research interests lie in the field of Natural Language Processing and Machine Learning.
-		I am particularly interested in addressing the task of named entity recognition in noisy data.
-		Another thread in my research is the computational analysis of <a href="https://en.wikipedia.org/wiki/Code-switching">linguistic code-switching</a>.
-		Additionally, I study multimodal approaches that combine lexical (i.e., phonology, morphology, syntax, and
-		semantics) and visual information framed around named-entity-related tasks.
+		I am Gustavo Aguilar, and I recently completed my PhD in Computer Science at the University of Houston (December 2020). 
+		My dissertation was on <a href="#">Neural Sequence Labeling on Social Media Text</a> and I was advised by
+		<a href="http://solorio.uh.edu/" target="_blank">Dr. Thamar Solorio</a>.
+	</p>
+	<p>	
+		During my PhD, I had the chance to work on <a href="https://en.wikipedia.org/wiki/Code-switching">linguistic code-switching</a> sequence labeling, <a href="https://www.aclweb.org/anthology/P19-1095/">multimodal and multi-view 
+		learning for emotion recognition</a> (Alexa Speech), <a href="https://ojs.aaai.org/index.php/AAAI/article/view/6229">knowledge distillation</a> (Alexa AI), 
+		and <a href="https://arxiv.org/abs/2010.12730">model robustness to social media noise</a> (Salesforce Research). 
 	</p>
 	<p>
-		I work at <a href="http://ritual.uh.edu/" target="_blank">Research in Text Understanding and Analysis of Language (RiTUAL)</a> lab,
-		and my advisor is <a href="http://solorio.uh.edu/" target="_blank">Dr. Thamar Solorio</a>.
+		My PhD was supported by the National Science Foundation (<a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1910192&HistoricalAwards=false">NSF grant #1910192</a>)
+		and the <a href="https://snapresearchfs.splashthat.com/">2019 Snap Research Fellowship</a>.
 	</p>
+	<!-- <p>
+		My research interests lie in the field of Natural Language Processing and Machine Learning.
+		I am particularly interested in addressing the task of named entity recognition in noisy data.
+		Another thread in my research is the computational analysis of linguistic code-switching</a>.
+		Additionally, I study multimodal approaches that combine lexical (i.e., phonology, morphology, syntax, and
+		semantics) and visual information framed around named-entity-related tasks.
+
+		I work at <a href="http://ritual.uh.edu/" target="_blank">Research in Text Understanding and Analysis of Language (RiTUAL)</a> lab,
+		and my advisor is .
+	</p> -->
 
 	<br>
 	<h3>Prior to entering the PhD program</h3>
