--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ permalink: /
 	</p>
 	<p>
 		<img src="{{ '/assets/images/profile_photo.png' | relative_url }}" width="240" height="240" style="float:right; margin: 0px 30px 30px 20px;" />
-		I am Gustavo Aguilar, and I recently completed my PhD in Computer Science at the University of Houston (December 2020). 
-		My dissertation was on <a href="#">Neural Sequence Labeling on Social Media Text</a> and I was advised by
+		I am Gustavo Aguilar, and I am currently working as an Applied Scientist in the Amazon Alexa AI team.
+		I recently completed my PhD in Computer Science at the University of Houston (December 2020). 
+		My dissertation was on <a href="https://uh-ir.tdl.org/handle/10657/7726">Neural Sequence Labeling on Social Media Text</a> and I was advised by
 		<a href="http://solorio.uh.edu/" target="_blank">Dr. Thamar Solorio</a>.
 	</p>
 	<p>	
